# my_first_web_project

./: README.md
cool-load/: README.md  package-lock.json  package.json  todo.txt
cool-load-alfa/: package-lock.json  package.json
cool-load-alfa/public/: index.html
cool-load-alfa/src/: App.js  index.js  main.scss  store.js
cool-load-alfa/src/Forms/: EditorContainers.js  EditorMoviment.js
cool-load-alfa/src/pages/: ContainerPage.js  ContainerReportPage.js  MovimentPage.js  MovimentReportPage.js
cool-load-alfa/src/reducers/: ContainerSlice.js  ErrorSlice.js  MessageSlice.js  MovimentSlice.js
cool-load-alfa/src/service/: crud.js
cool-load-alfa/src/service/Middleware/: ContainersMiddleware.js  MovimentsMiddleware.js
cool-load-alfa/src/util/: builders.js  utilities.js
cool-load/public/: index.html
cool-load/src/: App.js  index.js  main.scss
cool-load/src/components/: TableView.js
cool-load/src/model/: Container.js  Moviments.js  client.js
cool-load/src/pages/: CargoContainer.js  Client.js  Moviment.js  ViewPath.js  home.js
cool-load/src/services/: CRUD.js  util.js
cool_load_backend/: Cargo.toml  data.db  rocket.toml
cool_load_backend/src/: main.rs
cool_load_backend/src/model/: client.rs  container.rs  mod.rs  moviment.rs  pack_container.rs  pack_moviment.rs
cool_load_backend/src/persist/: client_persist.rs  container_persist.rs  mod.rs  moviment_persist.rs
cool_load_backend/src/router/: get.rs  mod.rs  post.rs
cool_load_backend/src/router/post/: add.rs  edit.rs  get_all.rs  mod.rs  remove.rs
(+7 files in other folders)
