[package]
name = "cool_load_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rusqlite = { version = "0.26.3", features = ["bundled"]}
chrono =  { version = "0.4.19", features = ["serde"]}
rand = "0.8.4"